--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
+    android:id="@+id/id_drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <fragment
-        android:id="@+id/fragment_left"
-        android:name="fast.flyer.com.supportdesign.LeftMenuFragment"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:tag="LEFT"
-        android:layout_gravity="left"/>
-
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/rl_content"
         android:layout_width="match_parent"
-        android:background="@mipmap/bg_content"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@mipmap/bg_content">
+    </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/id_nv_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:fitsSystemWindows="true"
+        android:tag="LEFT"
+        android:backgroundTint="@android:color/black"
+        app:headerLayout="@layout/header_just_username"
+        app:menu="@menu/menu_drawer"/>
 
     <FrameLayout
-        android:id="@+id/rl_menu_right"
-        android:layout_width="150dp"
+        android:id="@+id/fl_right"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:layout_gravity="right"
-        android:background="#ddd"/>
+        android:layout_gravity="end"
+        android:background="@android:color/darker_gray"/>
 
 </android.support.v4.widget.DrawerLayout>
