--- a/app/src/main/res/layout/left_menu_fragment.xml
+++ b/app/src/main/res/layout/left_menu_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
-        android:text="第一项"/>
+        android:text="Toolbar简单使用"/>
 
     <TextView
         android:id="@+id/tv_second"
